--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тест личности</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Психология онлайн</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Добро пожаловать в тест личности!</h1>
-    </header>
+  <header>
+    <nav>
+      <div class="logo">Психология онлайн</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="tests.html">Тесты</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <p>Нажмите на кнопку ниже, чтобы пройти тест.</p>
-        <a href="test.html" class="btn">Пройти тест</a>
-    </main>
+  <main class="home-content">
+    <section class="about-me">
+      <h1>Добро пожаловать!</h1>
+      <p>Меня зовут [Твоё имя], я практикующий психолог и создатель этого сайта. Здесь вы найдёте полезные тесты и информацию о психологии.</p>
+      <div class="social-links">
+        <a href="#" target="_blank">Telegram</a>
+        <a href="#" target="_blank">Instagram</a>
+        <a href="#" target="_blank">VK</a>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 Тест личности</p>
-    </footer>
-
-    <script src="script.js"></script>
+  <footer>
+    <p>&copy; 2025 Психология онлайн</p>
+  </footer>
 </body>
 </html>
