--- a/index.html
+++ b/index.html
@@ -1,80 +1,36 @@
-/* Оливково-бежевые стили для сайта */
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Психология онлайн</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <div class="logo">Психология онлайн</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="tests.html">Тесты</a></li>
+      </ul>
+    </nav>
+  </header>
 
-body {
-  margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f6f2e7; /* светло-бежевый фон */
-  color: #333;
-}
+  <main class="home-content">
+    <section class="about-me">
+      <h1>Добро пожаловать!</h1>
+      <p>Меня зовут [Твоё имя], я практикующий психолог и создатель этого сайта. Здесь вы найдёте полезные тесты и информацию о психологии.</p>
+      <div class="social-links">
+        <a href="#" target="_blank">Telegram</a>
+        <a href="#" target="_blank">Instagram</a>
+        <a href="#" target="_blank">VK</a>
+      </div>
+    </section>
+  </main>
 
-header {
-  background-color: #78866b; /* оливковый */
-  color: white;
-  padding: 1rem 2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.nav-links {
-  list-style: none;
-  display: flex;
-  gap: 1.5rem;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-links li a {
-  text-decoration: none;
-  color: white;
-  font-weight: 500;
-  transition: color 0.3s;
-}
-
-.nav-links li a:hover {
-  color: #f6f2e7;
-}
-
-.home-content {
-  padding: 2rem;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.about-me h1 {
-  color: #5e6d50; /* тёмно-оливковый */
-  font-size: 2.2rem;
-  margin-bottom: 1rem;
-}
-
-.about-me p {
-  font-size: 1.1rem;
-  line-height: 1.6;
-  margin-bottom: 1.5rem;
-}
-
-.social-links a {
-  display: inline-block;
-  margin-right: 1rem;
-  text-decoration: none;
-  color: #78866b;
-  font-weight: bold;
-  transition: color 0.3s;
-}
-
-.social-links a:hover {
-  color: #5e6d50;
-}
-
-footer {
-  text-align: center;
-  padding: 1rem;
-  background-color: #78866b;
-  color: white;
-  margin-top: 2rem;
-}
+  <footer>
+    <p>&copy; 2025 Психология онлайн</p>
+  </footer>
+</body>
+</html>
