--- a/tests.html
+++ b/tests.html
@@ -21,8 +21,8 @@
     <h1>Выберите тест</h1>
     <div class="test-list">
       <div class="test-card">
-        <h2>Тест на тип личности</h2>
-        <p>Узнайте свой тип мышления и восприятия мира.</p>
+        <h2>Тест на уровень мотивации</h2>
+        <p>Узнайте свой уровень потребности в достижениях.</p>
         <a href="test1.html" class="test-button">Пройти тест</a>
       </div>
       <div class="test-card">
